# stylus-call-poc

./: .gitignore  .gitmodules  README.md
SolidityReceiver/: .gas-snapshot  README.md
SolidityReceiver/script/: SolidityReceiver.s.sol
SolidityReceiver/src/: SolidityReceiver.sol
SolidityReceiver/test/: SolidityReceiver.t.sol
stylus-call/: Cargo.toml  README.md
stylus-call/src/: lib.rs  main.rs
